--- a/src/app/backend/layout/layout.component.html
+++ b/src/app/backend/layout/layout.component.html
@@ -63,7 +63,7 @@
           </div>
 
           <div fxLayout="row" fxFlex="75" fxLayoutAlign="end center">
-            <div class="widget-text mx-2">
+            <!-- <div class="widget-text mx-2">
               <a mat-icon-button matTooltip="{{ 'Change language' }}" [matMenuTriggerFor]="langMenu" #langMenuTrigger="matMenuTrigger">
                 <img [src]="flag.image" height="24" width="24" />
                 <span fxShow="false" fxShow.gt-sm class="flag-menu-title"></span>
@@ -74,7 +74,7 @@
                   <button mat-menu-item *ngFor="let flag of flags" (click)="changeLang(flag)"><img [src]="flag.image" width="18" /> {{ flag.name }}</button>
                 </span>
               </mat-menu>
-            </div>
+            </div> -->
 
             <!-- <button class="mx-1" mat-icon-button matTooltip="{{'Notifications'}}"
               (click)="onViewNotifications()">
