Add pagination for custom table

--- a/src/app/shared/table/custom-table/custom-table.component.html
+++ b/src/app/shared/table/custom-table/custom-table.component.html
@@ -19,5 +19,5 @@
     </tr>
   </table>
 
-  <mat-paginator [pageSizeOptions]="[5, 10, 25, 100]"></mat-paginator>
+  <mat-paginator (page)="onChangePage($event)" [length]="dataCount" [pageSizeOptions]="paginationSize"></mat-paginator>
 </div>
