adding log out event

--- a/src/app/backend/layout/layout.component.html
+++ b/src/app/backend/layout/layout.component.html
@@ -110,7 +110,7 @@
                 <mat-icon>account_box</mat-icon>
                 {{ 'Editar Perfil' }}
               </button>
-              <button mat-menu-item (click)="onLogout()">
+              <button mat-menu-item (click)="logout()">
                 <mat-icon>exit_to_app</mat-icon>
                 {{ 'Cerrar la sesión' }}
               </button>
