Add filters to custom table

--- a/src/app/trace-actions/pages/trace-actions-page/trace-actions-page.component.html
+++ b/src/app/trace-actions/pages/trace-actions-page/trace-actions-page.component.html
@@ -6,6 +6,8 @@
     [displayedColumns]="displayedColumns"
     [columnsName]="columnsName"
     [paginationSize]="paginationSize"
+    [filters]="tableFilters"
     (changePage)="onChangePage($event)"
+    (changeFilter)="onChangeFilter($event)"
   ></app-custom-table>
 </div>
