--- a/src/app/shared/table/custom-table/custom-table.component.html
+++ b/src/app/shared/table/custom-table/custom-table.component.html
@@ -1,7 +1,12 @@
-<mat-form-field>
-  <mat-label>Filter</mat-label>
-  <input matInput (keyup)="applyFilter($event)" placeholder="Ex. Mia" #input />
-</mat-form-field>
+<div *ngIf="filters" class="d-flex flex-row flex-wrap">
+  <ng-container *ngFor="let filter of filters">
+    <mat-form-field class="mx-1">
+      <mat-label>{{ filter.title }}</mat-label>
+      <input matInput (keyup)="searchTerm.next({ name: filter.name, result: $event })" />
+      <!-- <input matInput (keyup)="applyFilter($event, filter.name)" /> -->
+    </mat-form-field>
+  </ng-container>
+</div>
 
 <div *ngIf="data" class="mat-elevation-z8 w-100">
   <table mat-table [dataSource]="data" matSort>
@@ -14,9 +19,9 @@
     <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
 
     <!-- Row shown when there is no matching data. -->
-    <tr class="mat-row" *matNoDataRow>
+    <!-- <tr class="mat-row" *matNoDataRow>
       <td class="mat-cell" colspan="4">No data matching the filter "{{ input.value }}"</td>
-    </tr>
+    </tr> -->
   </table>
 
   <mat-paginator (page)="onChangePage($event)" [length]="dataCount" [pageSizeOptions]="paginationSize"></mat-paginator>
