algunos cambios, chequear

--- a/src/app/shared/table/custom-table/custom-table.component.html
+++ b/src/app/shared/table/custom-table/custom-table.component.html
@@ -6,6 +6,9 @@
       <!-- <input matInput (keyup)="applyFilter($event, filter.name)" /> -->
     </mat-form-field>
   </ng-container>
+  <button mat-icon-button title="Reiniciar busqueda">
+    <mat-icon>clear</mat-icon>
+  </button>
 </div>
 
 <div *ngIf="data" class="mat-elevation-z8 w-100">
