--- a/src/app/shared/table/custom-table/custom-table.component.scss
+++ b/src/app/shared/table/custom-table/custom-table.component.scss
@@ -1,3 +1,13 @@
 table {
   width: 100%;
 }
+
+.mat-column-actions {
+  text-align: right;
+  justify-content: flex-end;
+}
+
+.mat-column-Actions {
+  text-align: right;
+  justify-content: flex-end;
+}
