adding fake data to dashboard

--- a/src/app/backend/appBackoffice/dashboard/dashboard.component.html
+++ b/src/app/backend/appBackoffice/dashboard/dashboard.component.html
@@ -1,1 +1,38 @@
-<p>dashboard works!</p>
+<div class="container">
+  <div class="row">
+    <mat-card class="card">
+      <mat-card-header>
+        <div mat-card-avatar class="header-image"></div>
+        <mat-card-title>Usuarios</mat-card-title>
+        <mat-card-subtitle>14.5K</mat-card-subtitle>
+      </mat-card-header>
+      <img mat-card-image src="../../../../assets/images/users/profile2.png" alt="Photo of a Shiba Inu" />
+    </mat-card>
+    <mat-card class="card">
+      <mat-card-header>
+        <div mat-card-avatar class="header-image"></div>
+        <mat-card-title>Departamentos</mat-card-title>
+        <mat-card-subtitle>571</mat-card-subtitle>
+      </mat-card-header>
+      <img mat-card-image src="../../../../assets/images/users/user.png" alt="Photo of a Shiba Inu" />
+    </mat-card>
+  </div>
+  <div class="row">
+    <mat-card class="card">
+      <mat-card-header>
+        <div mat-card-avatar class="header-image"></div>
+        <mat-card-title>Pacientes</mat-card-title>
+        <mat-card-subtitle>14.5K</mat-card-subtitle>
+      </mat-card-header>
+      <img mat-card-image src="../../../../assets/images/users/user.png" alt="Photo of a Shiba Inu" />
+    </mat-card>
+    <mat-card class="card">
+      <mat-card-header>
+        <div mat-card-avatar class="header-image"></div>
+        <mat-card-title>Trabajadores</mat-card-title>
+        <mat-card-subtitle>1.5K</mat-card-subtitle>
+      </mat-card-header>
+      <img mat-card-image src="../../../../assets/images/users/profile2.png" alt="Photo of a Shiba Inu" />
+    </mat-card>
+  </div>
+</div>
