--- a/src/app/backend/appBackoffice/dashboard/dashboard.component.html
+++ b/src/app/backend/appBackoffice/dashboard/dashboard.component.html
@@ -1,12 +1,12 @@
 <div class="container">
   <div class="row">
-    <mat-card class="card">
+    <mat-card style="margin: 20px" class="card">
       <mat-card-header>
         <div mat-card-avatar class="header-image"></div>
         <mat-card-title>Usuarios</mat-card-title>
         <mat-card-subtitle>14.5K</mat-card-subtitle>
       </mat-card-header>
-      <img mat-card-image src="../../../../assets/images/users/profile2.png" alt="Photo of a Shiba Inu" />
+      <img  mat-card-image src="../../../../assets/images/grafico.png" alt="grafico" />
     </mat-card>
     <mat-card class="card">
       <mat-card-header>
@@ -14,17 +14,31 @@
         <mat-card-title>Departamentos</mat-card-title>
         <mat-card-subtitle>571</mat-card-subtitle>
       </mat-card-header>
-      <img mat-card-image src="../../../../assets/images/users/user.png" alt="Photo of a Shiba Inu" />
+      <img  mat-card-image src="../../../../assets/images/grafico.png" alt="grafico" />
     </mat-card>
-  </div>
-  <div class="row">
     <mat-card class="card">
       <mat-card-header>
         <div mat-card-avatar class="header-image"></div>
         <mat-card-title>Pacientes</mat-card-title>
         <mat-card-subtitle>14.5K</mat-card-subtitle>
       </mat-card-header>
-      <img mat-card-image src="../../../../assets/images/users/user.png" alt="Photo of a Shiba Inu" />
+      <img  mat-card-image src="../../../../assets/images/grafico.png" alt="grafico" />
+    </mat-card>
+    <mat-card class="card">
+      <mat-card-header>
+        <div mat-card-avatar class="header-image"></div>
+        <mat-card-title>Unidades de Salud</mat-card-title>
+        <mat-card-subtitle>14.5K</mat-card-subtitle>
+      </mat-card-header>
+      <img  mat-card-image src="../../../../assets/images/grafico.png" alt="grafico" />
+    </mat-card>
+    <mat-card class="card">
+      <mat-card-header>
+        <div mat-card-avatar class="header-image"></div>
+        <mat-card-title>Puesto de trabajo</mat-card-title>
+        <mat-card-subtitle>1.5K</mat-card-subtitle>
+      </mat-card-header>
+      <img  mat-card-image src="../../../../assets/images/grafico.png" alt="grafico" />
     </mat-card>
     <mat-card class="card">
       <mat-card-header>
@@ -32,7 +46,7 @@
         <mat-card-title>Trabajadores</mat-card-title>
         <mat-card-subtitle>1.5K</mat-card-subtitle>
       </mat-card-header>
-      <img mat-card-image src="../../../../assets/images/users/profile2.png" alt="Photo of a Shiba Inu" />
+      <img  mat-card-image src="../../../../assets/images/grafico.png" alt="grafico" />
     </mat-card>
   </div>
 </div>
