Se creo la opcion de Ordenar en las tablas y se adiciono a los crud de trazas y a el nomenclador de municipio

--- a/src/app/nomenclator-modules/municipality/pages/municipality-page/municipality-page.component.html
+++ b/src/app/nomenclator-modules/municipality/pages/municipality-page/municipality-page.component.html
@@ -14,5 +14,6 @@
     [loading]="loading"
     (changePage)="onChangePage($event)"
     (changeFilter)="onChangeFilter($event)"
+    (changeSort)="changeSort($event)"
   ></app-custom-table>
 </div>
