--- a/src/app/security-module/trace-actions/pages/trace-actions-page/trace-actions-page.component.html
+++ b/src/app/security-module/trace-actions/pages/trace-actions-page/trace-actions-page.component.html
@@ -9,5 +9,6 @@
     [filters]="tableFilters"
     (changePage)="onChangePage($event)"
     (changeFilter)="onChangeFilter($event)"
+    (changeSort)="onChangeSort($event)"
   ></app-custom-table>
 </div>
