--- a/src/app/shared/table/custom-table/custom-table.component.html
+++ b/src/app/shared/table/custom-table/custom-table.component.html
@@ -13,10 +13,10 @@
 </div>
 
 <div class="mat-elevation-z8 w-100">
-  <table *ngIf="data && displayTable && !loading" mat-table [dataSource]="data" matSort>
+  <table *ngIf="data" mat-table [dataSource]="data" matSort (matSortChange)="sortData($event)">
     <ng-container *ngFor="let column of displayedColumns; let i = index" matColumnDef="{{ column }}">
       <ng-container *ngIf="displayedColumns[i] !== 'actions'; else actionsButtons">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header>{{ columnsName[i] }}</th>
+        <th mat-header-cell *matHeaderCellDef mat-sort-header="{{ column }}">{{ columnsName[i] }}</th>
         <td mat-cell *matCellDef="let row">{{ row[column] }}</td>
       </ng-container>
       <ng-template #actionsButtons>
