--- a/src/app/nomenclator-modules/cat-science/pages/cat-science-page/cat-science-page.component.html
+++ b/src/app/nomenclator-modules/cat-science/pages/cat-science-page/cat-science-page.component.html
@@ -14,5 +14,6 @@
     [loading]="loading"
     (changePage)="onChangePage($event)"
     (changeFilter)="onChangeFilter($event)"
+    (changeSort)="onChangeSort($event)"
   ></app-custom-table>
 </div>
