--- a/src/app/nomenclator-modules/country/pages/country-page/country-page.component.html
+++ b/src/app/nomenclator-modules/country/pages/country-page/country-page.component.html
@@ -1,5 +1,6 @@
 <div class="container mt-3">
-  <div class="d-flex justify-content-end">
+  <div class="d-flex justify-content-between align-items-center">
+    <h4>Países</h4>
     <button (click)="createCountry()" mat-raised-button color="primary" class="button">Crear País</button>
   </div>
   <app-custom-table
