Adicionando titulo a los CRUDS creados

--- a/src/app/nomenclator-modules/cat-science/pages/cat-science-page/cat-science-page.component.html
+++ b/src/app/nomenclator-modules/cat-science/pages/cat-science-page/cat-science-page.component.html
@@ -1,5 +1,6 @@
 <div class="container mt-3">
-  <div class="d-flex justify-content-end">
+  <div class="d-flex justify-content-between align-items-center">
+    <h4>Categorías Científicas</h4>
     <button (click)="createCatScience()" mat-raised-button color="primary" class="button">Crear Categoría Científica</button>
   </div>
   <app-custom-table
