--- a/src/app/security-module/trace-actions/pages/trace-actions-page/trace-actions-page.component.html
+++ b/src/app/security-module/trace-actions/pages/trace-actions-page/trace-actions-page.component.html
@@ -1,4 +1,5 @@
 <div class="container mt-3">
+  <h4>Trazas de Acciones</h4>
   <app-custom-table
     *ngIf="traceActions"
     [data]="traceActions"
