--- a/src/app/nomenclator-modules/gender/pages/gender-page/gender-page.component.html
+++ b/src/app/nomenclator-modules/gender/pages/gender-page/gender-page.component.html
@@ -1,5 +1,6 @@
 <div class="container mt-3">
-  <div class="d-flex justify-content-end">
+  <div class="d-flex justify-content-between align-items-center">
+    <h4>Sexo</h4>
     <button (click)="createGender()" mat-raised-button color="primary" class="button">Crear Sexo</button>
   </div>
   <app-custom-table
