--- a/src/app/nomenclator-modules/municipality/pages/municipality-page/municipality-page.component.html
+++ b/src/app/nomenclator-modules/municipality/pages/municipality-page/municipality-page.component.html
@@ -1,5 +1,6 @@
 <div class="container mt-3">
-  <div class="d-flex justify-content-end">
+  <div class="d-flex justify-content-between align-items-center">
+    <h4>Municipios</h4>
     <button (click)="createMunicipality()" mat-raised-button color="primary" class="button">Crear Municipio</button>
   </div>
   <app-custom-table
