--- a/src/app/nomenclator-modules/specialty/pages/specialty-page/specialty-page.component.html
+++ b/src/app/nomenclator-modules/specialty/pages/specialty-page/specialty-page.component.html
@@ -1,5 +1,6 @@
 <div class="container mt-3">
-  <div class="d-flex justify-content-end">
+  <div class="d-flex justify-content-between align-items-center">
+    <h4>Especialidades</h4>
     <button (click)="createSpecialty()" mat-raised-button color="primary" class="button">Crear Especialidad</button>
   </div>
   <app-custom-table
