adding docent form component

--- a/src/app/nomenclator-modules/cat-docent/components/cat-docent-form/cat-docent-form.component.html
+++ b/src/app/nomenclator-modules/cat-docent/components/cat-docent-form/cat-docent-form.component.html
@@ -1,1 +1,18 @@
-<p>cat-docent-form works!</p>
+<div class="form">
+  <h4>{{ data.catDocent ? 'Editar Categoría Docente' : 'Crear Categoría Docente' }}</h4>
+  <mat-divider class="my-4"></mat-divider>
+  <form *ngIf="catDocentForm" [formGroup]="catDocentForm">
+    <mat-form-field class="w-100" appearance="outline">
+      <mat-label>Descripción:</mat-label>
+      <input matInput formControlName="descripcion" />
+      <mat-error *ngIf="this.catDocentForm.controls['descripcion'].invalid"> {{ 'La descripción es' }} <strong>requerido</strong> </mat-error>
+    </mat-form-field>
+  </form>
+  <mat-divider class="my-4"></mat-divider>
+  <div class="d-flex align-items-center justify-content-end">
+    <button (click)="onCancel()" mat-raised-button color="default" class="button mx-2">Cancelar</button>
+    <button (click)="onSubmit(catDocentForm.value)" [disabled]="!catDocentForm.valid" mat-raised-button color="primary" class="button">
+      {{ data.catDocent ? 'Editar' : 'Crear' }}
+    </button>
+  </div>
+</div>
