--- a/src/app/shared/table/custom-table/custom-table.component.scss
+++ b/src/app/shared/table/custom-table/custom-table.component.scss
@@ -52,13 +52,13 @@ table {
   }
   .mat-cell,
   .mat-header-cell {
-    word-wrap: initial;
-    display: table-cell;
+    //word-wrap: initial;
+    //display: table-cell;
     padding: 0px 5px;
-    line-break: unset;
-    width: auto;
-    white-space: nowrap;
-    overflow: hidden;
-    vertical-align: middle;
+    //line-break: unset;
+    //width: auto;
+    //white-space: nowrap;
+    //overflow: hidden;
+    //vertical-align: middle;
   }
 }
