--- a/src/app/nomenclator-modules/race/components/race-form/race-form.component.html
+++ b/src/app/nomenclator-modules/race/components/race-form/race-form.component.html
@@ -1,5 +1,5 @@
 <div class="form">
-  <h4>{{ data.race ? 'Editar Categoría Científica' : 'Crear Categoría Científica' }}</h4>
+  <h4>{{ data.race ? 'Editar Raza' : 'Crear Raza' }}</h4>
   <mat-divider class="my-4"></mat-divider>
   <form *ngIf="raceForm" [formGroup]="raceForm">
     <mat-form-field class="w-100" appearance="outline">
