--- a/src/app/security-module/role/pages/role-page/role-page.component.html
+++ b/src/app/security-module/role/pages/role-page/role-page.component.html
@@ -1,7 +1,7 @@
 <div class="container mt-3">
   <div class="d-flex justify-content-between align-items-center">
-    <h4>Grupos</h4>
-    <button (click)="createRole()" mat-raised-button color="primary" class="button">Crear Grupo</button>
+    <h4>Roles</h4>
+    <button (click)="createRole()" mat-raised-button color="primary" class="button">Crear Rol</button>
   </div>
   <app-custom-table
     *ngIf="roles"
