--- a/src/app/security-module/user/components/user-form/user-form.component.html
+++ b/src/app/security-module/user/components/user-form/user-form.component.html
@@ -1,7 +1,7 @@
 <div class="container">
   <mat-horizontal-stepper [linear]="true" #stepper>
     <mat-step [stepControl]="userFormGroup">
-      <form [formGroup]="userFormGroup">
+      <form *ngIf="userFormGroup" [formGroup]="userFormGroup">
         <ng-template matStepLabel>Información Básica</ng-template>
         <div class="my-3 d-flex justify-content-center align-items-center">
           <h4>Información Básica</h4>
@@ -68,8 +68,8 @@
           <!-- Roles -->
           <div class="col-lg-6 col-md-12">
             <mat-form-field class="w-100" appearance="outline">
-              <mat-label>Grupo</mat-label>
-              <mat-select formControlName="groups">
+              <mat-label>Grupo:</mat-label>
+              <mat-select formControlName="groups" multiple>
                 <mat-option *ngFor="let role of roles" [value]="role.id">{{ role.name }}</mat-option>
               </mat-select>
               <mat-error *ngIf="this.userFormGroup.controls['groups'].invalid">Seleccione un Grupo</mat-error>
@@ -109,13 +109,58 @@
             </mat-form-field>
           </div>
         </div>
+
+        <!-- Contraseña -->
+
+        <div class="my-3 d-flex justify-content-center align-items-center">
+          <h4>Seguridad</h4>
+        </div>
+        <div class="row">
+          <div class="col-lg-6 col-md-12">
+            <mat-form-field class="w-100" appearance="outline">
+              <mat-label>Contraseña</mat-label>
+              <input [type]="this.passwordType" matInput placeholder="Contraseña" #pass formControlName="password" name="password" />
+
+              <mat-icon style="cursor: pointer" *ngIf="this.passwordType == 'password'" mat-icon-button matSuffix (click)="this.passwordType = 'text'"
+                >visibility
+              </mat-icon>
+
+              <mat-icon style="cursor: pointer" *ngIf="this.passwordType == 'text'" mat-icon-button matSuffix (click)="this.passwordType = 'password'">
+                visibility_off</mat-icon
+              >
+              <mat-error *ngIf="passwordControl.errors?.required"> {{ 'La contraseña es' }} <strong>requerido</strong> </mat-error>
+              <mat-error *ngIf="passwordControl.errors?.lowercase == false"> {{ 'La contraseña tiene que contener letras Minúsculas' }} </mat-error>
+              <mat-error *ngIf="passwordControl.errors?.uppercase == false"> {{ 'La contraseña tiene que contener letras Mayúsculas' }} </mat-error>
+              <mat-error *ngIf="passwordControl.errors?.numeric == false"> {{ 'La contraseña tiene que contener números' }} </mat-error>
+              <mat-error *ngIf="passwordControl.errors?.minlength"> {{ 'Su contraseña debe contener al menos 8 caracteres.' }} </mat-error>
+              <mat-error *ngIf="passwordControl.errors?.onlyNumbers"> {{ 'Su contraseña no puede ser completamente numérica.' }} </mat-error>
+              <mat-hint class="w-100">
+                <span *ngIf="passwordContainNameValidation" class="text-danger"
+                  >Su contraseña no puede ser muy similar a su otra información personal.<br
+                /></span>
+              </mat-hint>
+            </mat-form-field>
+          </div>
+          <div class="col-lg-6 col-md-12">
+            <mat-form-field class="w-100" appearance="outline">
+              <mat-label>Confirmar Contraseña</mat-label>
+              <input [type]="this.passwordType" matInput placeholder="Repita la Contraseña" #pass formControlName="confirm_password" name="password" />
+
+              <mat-error *ngIf="this.userFormGroup.controls['confirm_password'].invalid"> {{ 'La confirmación es' }} <strong>requerido</strong> </mat-error>
+              <mat-hint *ngIf="passwordDontMatch" class="w-100">
+                <span class="text-danger">La confirmación debe ser igual a la contraseña</span>
+              </mat-hint>
+            </mat-form-field>
+          </div>
+        </div>
+
         <div class="d-flex justify-content-end">
-          <button color="primary" mat-raised-button matStepperNext>Siguiente</button>
+          <button [disabled]="passwordDontMatch" color="primary" mat-raised-button matStepperNext>Siguiente</button>
         </div>
       </form>
     </mat-step>
     <mat-step [stepControl]="personFormGroup" label="Informácion personal y de contacto">
-      <form [formGroup]="personFormGroup">
+      <form *ngIf="personFormGroup" [formGroup]="personFormGroup">
         <ng-template matStepLabel>Informácion personal y de contacto</ng-template>
         <div class="my-3 d-flex justify-content-center align-items-center">
           <h4>Informácion personal y de contacto</h4>
@@ -152,7 +197,7 @@
             <mat-form-field class="w-100" appearance="outline">
               <mat-label>Número de identificación:</mat-label>
               <input matInput formControlName="nro_identificacion" />
-              <mat-error *ngIf="this.personFormGroup.controls['nro_identificacion'].invalid">
+              <mat-error *ngIf="personFormGroup.controls['nro_identificacion'].invalid">
                 {{ 'El número de identificación es' }} <strong>requerido</strong>
               </mat-error>
             </mat-form-field>
@@ -199,52 +244,145 @@
               </div></mat-radio-button
             >
           </mat-radio-group>
-
-          <!-- tipo_doc -->
-          <div class="col-lg-6 col-md-12">
-            <mat-form-field class="w-100" appearance="outline">
-              <mat-label>Tipo de Documento:</mat-label>
-              <mat-select formControlName="tipo_doc">
-                <mat-option *ngFor="let doc of docTypes" [value]="doc.id">{{ doc.descripcion }}</mat-option>
-              </mat-select>
-              <mat-error *ngIf="this.personFormGroup.controls['tipo_doc'].invalid">Seleccione un Documento</mat-error>
-            </mat-form-field>
-          </div>
-
-          <!-- nacionalidad -->
-          <div class="col-lg-6 col-md-12">
-            <mat-form-field class="w-100" appearance="outline">
-              <mat-label>Nacionalidades:</mat-label>
-              <mat-select formControlName="nacionalidad">
-                <mat-option *ngFor="let nationality of nationalities" [value]="nationality.id">{{ nationality.descripcion }}</mat-option>
-              </mat-select>
-            </mat-form-field>
-          </div>
-
-          <!-- contacto -->
-          <div class="col-lg-6 col-md-12">
-            <mat-form-field class="w-100" appearance="outline">
-              <mat-label>Contactos:</mat-label>
-              <mat-select formControlName="contacto">
-                <mat-option *ngFor="let contact of contacts" [value]="contact.id">{{ contact.contacto_emergencia }}</mat-option>
-              </mat-select>
-            </mat-form-field>
-          </div>
-
-          <!-- direccion -->
-          <div class="col-lg-6 col-md-12">
-            <mat-form-field class="w-100" appearance="outline">
-              <mat-label>Direcciones:</mat-label>
-              <mat-select formControlName="direccion">
-                <mat-option *ngFor="let address of addresses" [value]="address.id">{{ address.direccion }}</mat-option>
-              </mat-select>
-            </mat-form-field>
-          </div>
         </div>
-        <div>
-          <div class="d-flex justify-content-between">
-            <button color="primary" mat-raised-button matStepperPrevious>Atras</button>
-            <button color="primary" mat-raised-button matStepperNext>Siguiente</button>
+
+        <div class="card p-3">
+          <h5>Dirección y Contacto</h5>
+          <div class="row" *ngIf="personFormGroup" [formGroup]="personFormGroup">
+            <!-- tipo_doc -->
+            <div class="col-lg-6 col-md-12">
+              <mat-form-field class="w-100" appearance="outline">
+                <mat-label>Tipo de Documento:</mat-label>
+                <mat-select formControlName="tipo_doc">
+                  <mat-option *ngFor="let doc of docTypes" [value]="doc.id">{{ doc.descripcion }}</mat-option>
+                </mat-select>
+                <mat-error *ngIf="personFormGroup.controls['tipo_doc'].invalid">Seleccione un Documento</mat-error>
+              </mat-form-field>
+            </div>
+
+            <!-- nacionalidad -->
+            <div class="col-lg-6 col-md-12">
+              <mat-form-field class="w-100" appearance="outline">
+                <mat-label>Nacionalidades:</mat-label>
+                <mat-select formControlName="nacionalidad">
+                  <mat-option *ngFor="let nationality of nationalities" [value]="nationality.id">{{ nationality.descripcion }}</mat-option>
+                </mat-select>
+              </mat-form-field>
+            </div>
+
+            <!-- Pais -->
+            <div class="col-lg-6 col-md-12">
+              <mat-form-field class="w-100" appearance="outline">
+                <mat-label>País:</mat-label>
+                <input matInput formControlName="pais" />
+              </mat-form-field>
+            </div>
+
+            <!-- municipio -->
+            <div class="col-lg-6 col-md-12">
+              <mat-form-field class="w-100" appearance="outline">
+                <mat-label>Municipio:</mat-label>
+                <input matInput formControlName="municipio" />
+              </mat-form-field>
+            </div>
+
+            <!-- estado -->
+            <div class="col-lg-6 col-md-12">
+              <mat-form-field class="w-100" appearance="outline">
+                <mat-label>Estado:</mat-label>
+                <input matInput formControlName="estado" />
+              </mat-form-field>
+            </div>
+
+            <!-- direccion -->
+            <div class="col-lg-6 col-md-12">
+              <mat-form-field class="w-100" appearance="outline">
+                <mat-label>Direcciones:</mat-label>
+                <input matInput formControlName="direccion" />
+                <mat-error *ngIf="personFormGroup.controls['direccion'].invalid"> {{ 'La dirección es' }} <strong>requerida</strong> </mat-error>
+              </mat-form-field>
+            </div>
+
+            <!-- numero -->
+            <div class="col-lg-6 col-md-12">
+              <mat-form-field class="w-100" appearance="outline">
+                <mat-label>Número:</mat-label>
+                <input matInput formControlName="numero" />
+              </mat-form-field>
+            </div>
+
+            <!-- cod_postal -->
+            <div class="col-lg-6 col-md-12">
+              <mat-form-field class="w-100" appearance="outline">
+                <mat-label>Código Postal:</mat-label>
+                <input matInput formControlName="cod_postal" />
+              </mat-form-field>
+            </div>
+
+            <!-- nombre_madre -->
+            <div class="col-lg-6 col-md-12">
+              <mat-form-field class="w-100" appearance="outline">
+                <mat-label>Nombre Madre:</mat-label>
+                <input matInput formControlName="nombre_madre" />
+              </mat-form-field>
+            </div>
+
+            <!-- nombre_padre -->
+            <div class="col-lg-6 col-md-12">
+              <mat-form-field class="w-100" appearance="outline">
+                <mat-label>Nombre del Padre:</mat-label>
+                <input matInput formControlName="nombre_padre" />
+              </mat-form-field>
+            </div>
+
+            <!-- contacto_emergencia -->
+            <div class="col-lg-6 col-md-12">
+              <mat-form-field class="w-100" appearance="outline">
+                <mat-label>Contacto de emergencia:</mat-label>
+                <input matInput formControlName="contacto_emergencia" />
+              </mat-form-field>
+            </div>
+
+            <!-- telefono_emergencia -->
+            <div class="col-lg-6 col-md-12">
+              <mat-form-field class="w-100" appearance="outline">
+                <mat-label>Teléfono de Emergencia:</mat-label>
+                <input matInput formControlName="telefono_emergencia" />
+              </mat-form-field>
+            </div>
+
+            <!-- telefono_casa -->
+            <div class="col-lg-6 col-md-12">
+              <mat-form-field class="w-100" appearance="outline">
+                <mat-label>Teléfono de casa:</mat-label>
+                <input matInput formControlName="telefono_casa" />
+              </mat-form-field>
+            </div>
+            <!-- telefono_trabajo -->
+            <div class="col-lg-6 col-md-12">
+              <mat-form-field class="w-100" appearance="outline">
+                <mat-label>Teléfono del Trabajo:</mat-label>
+                <input matInput formControlName="telefono_trabajo" />
+                <mat-error *ngIf="personFormGroup.controls['telefono_trabajo'].invalid">
+                  {{ 'El Teléfono del trabajo es' }} <strong>requerido</strong>
+                </mat-error>
+              </mat-form-field>
+            </div>
+
+            <!-- telefono_movil -->
+            <div class="col-lg-6 col-md-12">
+              <mat-form-field class="w-100" appearance="outline">
+                <mat-label>Teléfono movil:</mat-label>
+                <input matInput formControlName="telefono_movil" />
+                <mat-error *ngIf="personFormGroup.controls['telefono_movil'].invalid"> {{ 'El Teléfono movil es' }} <strong>requerido</strong> </mat-error>
+              </mat-form-field>
+            </div>
+            <div>
+              <div class="d-flex justify-content-between">
+                <button color="primary" mat-raised-button matStepperPrevious>Atras</button>
+                <button color="primary" mat-raised-button matStepperNext>Siguiente</button>
+              </div>
+            </div>
           </div>
         </div>
       </form>
@@ -263,9 +401,6 @@
             </p>
             <p class="my-2">
               Apellidos: <b>{{ userFormGroup.controls['last_name'].value }}</b>
-            </p>
-            <p class="my-2">
-              Correo: <b>{{ userFormGroup.controls['email'].value }}</b>
             </p>
             <p class="my-2">
               Correo: <b>{{ userFormGroup.controls['email'].value }}</b>
@@ -327,22 +462,22 @@
             <p class="my-2">
               Tipo de Documento: <b>{{ docTypes[personFormGroup.controls['tipo_doc']?.value]?.descripcion }}</b>
             </p>
-            <p class="my-2">
+            <!-- <p class="my-2">
               Dirección: <b>{{ addresses[personFormGroup.controls['direccion']?.value]?.direccion }}</b>
-            </p>
+            </p> -->
             <p class="my-2">
               Categoría Científica: <b>{{ nationalities[personFormGroup.controls['nacionalidad']?.value]?.descripcion }}</b>
             </p>
-            <p class="my-2">
+            <!-- <p class="my-2">
               Contacto: <b>{{ contacts[personFormGroup.controls['contacto']?.value]?.email }}</b>
-            </p>
+            </p> -->
           </div>
         </div>
       </div>
 
       <div class="d-flex justify-content-between mt-3">
         <button color="primary" mat-raised-button matStepperPrevious>Atras</button>
-        <button color="primary" mat-raised-button mat-button (click)="sendData()">Crear</button>
+        <button color="primary" mat-raised-button mat-button (click)="sendData()">{{ user && person ? 'Editar' : 'Crear' }}</button>
       </div>
     </mat-step>
   </mat-horizontal-stepper>
