--- a/src/app/security-module/user/pages/user-item/user-item.component.html
+++ b/src/app/security-module/user/pages/user-item/user-item.component.html
@@ -1,5 +1,5 @@
 <app-user-form
-  *ngIf="roles && catDoncents && catSciences && specialties && docTypes && nationalities && person"
+  *ngIf="roles && catDoncents && catSciences && specialties && docTypes && nationalities"
   [user]="user"
   [person]="person"
   [roles]="roles"
