Material Icon offline. Cambiar iconos que no se veian.

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -18,6 +18,7 @@ body {
 @import './assets/scss/color1';
 
 @import '~ngx-toastr/toastr';
+@import '~material-design-icons/iconfont/material-icons.css';
 
 // --------Global Styles for the Project-------------- ///
 
