--- a/src/app/structure-modules/health-unit/components/health-unit-form/health-unit-form.component.html
+++ b/src/app/structure-modules/health-unit/components/health-unit-form/health-unit-form.component.html
@@ -8,11 +8,13 @@
       <mat-error *ngIf="this.healthUnitForm.controls['nombre'].invalid"> {{ 'El nombre es' }} <strong>requerido</strong></mat-error>
     </mat-form-field>
 
-    <ng-select appearance="outline" class="custom w-100" placeholder="Nivel" [items]="levels" bindLabel="nombre" bindValue="id" formControlName="nivel">
-    </ng-select>
-    <small class="text-danger error-style" *ngIf="healthUnitForm.controls['nivel'].errors?.required && healthUnitForm.controls['nivel'].dirty"
-      >El nivel es <strong>requerido</strong></small
-    >
+    <div class="mb-4">
+      <ng-select appearance="outline" class="custom w-100" placeholder="Nivel" [items]="levels" bindLabel="nombre" bindValue="id" formControlName="nivel">
+      </ng-select>
+      <small class="text-danger error-style" *ngIf="healthUnitForm.controls['nivel'].errors?.required && healthUnitForm.controls['nivel'].dirty"
+        >El nivel es <strong>requerido</strong></small
+      >
+    </div>
 
     <mat-form-field class="w-100" appearance="outline">
       <mat-label>Direccion:</mat-label>
